# youtube-music

./: .gitignore  .json  .tool-versions  artist_order.json  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
.idx/: dev.nix
src/youtube_music/: a.py  main.py
