[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-music"
version = "0.1.0"
requires-python = "==3.9.19"
dependencies = [
    "ytmusicapi==1.8.2",
    "schedule==1.2.2",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
pre_install = "pdm venv activate"
post_install = "lefthook install"
pre_build = "ruff src"
post_build = ""

[tool.pytest.ini_options]
python_functions = "test_*"
testpaths = ["tests"]
addopts = "--verbose --cov --retries 2 --retry-delay 5"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
precision = 2

[tool.ruff]
target-version = "py39"
line-length = 110
select = ["UP"]

[tool.ruff.lint]
ignore = [ "F403", "F405", "F821", "E731", "PTH123" ]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
    "PTH", # pathlib
]

[tool.ruff.lint.per-file-ignores]
"*.py" = [
    "ANN101",
    "ANN102",
    "COM812",
    "ERA001",
    "FBT001",
    "FBT002",
    "INP001",
    "PT009",
    "PTH207",
    "S311",
    "S603",
    "T201",
    "TRY002",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9.12"
show_error_context = true
show_column_numbers = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "black==24.10.0",
    "coverage==7.6.8",
    "lefthook==1.8.4",
    "mypy==1.13.0",
    "pytest-cov==6.0.0",
    "pytest-retry==1.6.3",
    "pytest==8.3.3",
    "ruff==0.8.0",
]
